RESOLVED FIXED202630
MediaStreamTrack does not need to be a Document audio producer
https://bugs.webkit.org/show_bug.cgi?id=202630
Summary MediaStreamTrack does not need to be a Document audio producer
youenn fablet
Reported 2019-10-07 04:50:24 PDT
MediaStreamTrack does not need to be a Document audio producer
Attachments
Patch (7.38 KB, patch)
2019-10-07 04:57 PDT, youenn fablet
no flags
Patch (7.33 KB, patch)
2019-10-08 05:53 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-10-07 04:57:37 PDT
youenn fablet
Comment 2 2019-10-08 05:53:59 PDT
WebKit Commit Bot
Comment 3 2019-10-09 00:48:43 PDT
Comment on attachment 380423 [details] Patch Clearing flags on attachment: 380423 Committed r250900: <https://trac.webkit.org/changeset/250900>
WebKit Commit Bot
Comment 4 2019-10-09 00:48:45 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-10-09 00:49:17 PDT
Fujii Hironori
Comment 6 2019-10-09 02:38:46 PDT
Adrian Perez
Comment 7 2019-10-09 02:50:59 PDT
*** Bug 202734 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.