MediaStreamTrack does not need to be a Document audio producer https://bugs.webkit.org/show_bug.cgi?id=202630

Reviewed by Eric Carlson.

Instead of having all tracks being MediaProducer, we can use the new methods introduced for iOS
to mute/unmute capture tracks and get capture media state.
This allows to not register tracks that are not capture tracks.
Covered by existing tests.

* Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::MediaStreamTrack):
(WebCore::MediaStreamTrack::~MediaStreamTrack):
(WebCore::MediaStreamTrack::setMuted):
(WebCore::MediaStreamTrack::applyConstraints):
(WebCore::MediaStreamTrack::mediaState const):
(WebCore::MediaStreamTrack::updateCaptureAccordingToMutedState):
(WebCore::MediaStreamTrack::pageMutedStateDidChange): Deleted.
* Modules/mediastream/MediaStreamTrack.h:
* dom/Document.cpp:
(WebCore::Document::updateIsPlayingMedia):
(WebCore::Document::pageMutedStateDidChange):


Canonical link: https://commits.webkit.org/216197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250900 268f45cc-cd09-0410-ab3c-d52691b4dbfc